// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`item 17 (Wooden Arrow) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "Off-hand",
  "craftedBy": [
    {
      "recipeItemId": 1666,
      "recipeName": "Recipe: Wooden Arrow",
      "successRate": 100,
    },
  ],
  "crystalCount": null,
  "etcItemType": "arrow",
  "grade": "none",
  "iconFile": "etc_wooden_quiver_i00.png",
  "id": 17,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": true,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": null,
  "mDef": null,
  "material": "WOOD",
  "mpConsume": null,
  "name": "Wooden Arrow",
  "pAtk": null,
  "pAtkSpd": null,
  "pDef": null,
  "price": 2,
  "rCrit": null,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soldBy": [
    {
      "buyListId": 14,
      "npc": {
        "id": 30004,
        "name": "Katerina",
      },
      "price": 2,
    },
    {
      "buyListId": 20,
      "npc": {
        "id": 30063,
        "name": "Lara",
      },
      "price": 2,
    },
    {
      "buyListId": 23,
      "npc": {
        "id": 30081,
        "name": "Helvetia",
      },
      "price": 2,
    },
    {
      "buyListId": 28,
      "npc": {
        "id": 30085,
        "name": "Stanford",
      },
      "price": 2,
    },
    {
      "buyListId": 30,
      "npc": {
        "id": 30094,
        "name": "Gentler",
      },
      "price": 2,
    },
    {
      "buyListId": 35,
      "npc": {
        "id": 30137,
        "name": "Vollodos",
      },
      "price": 2,
    },
    {
      "buyListId": 42,
      "npc": {
        "id": 30150,
        "name": "Herbiel",
      },
      "price": 2,
    },
    {
      "buyListId": 43,
      "npc": {
        "id": 30163,
        "name": "Rex",
      },
      "price": 2,
    },
    {
      "buyListId": 21,
      "npc": {
        "id": 30165,
        "name": "Ralford",
      },
      "price": 2,
    },
    {
      "buyListId": 51,
      "npc": {
        "id": 30180,
        "name": "Sara",
      },
      "price": 2,
    },
    {
      "buyListId": 63,
      "npc": {
        "id": 30254,
        "name": "Harmony",
      },
      "price": 2,
    },
    {
      "buyListId": 65,
      "npc": {
        "id": 30301,
        "name": "Hally",
      },
      "price": 2,
    },
    {
      "buyListId": 68,
      "npc": {
        "id": 30315,
        "name": "Poesia",
      },
      "price": 2,
    },
    {
      "buyListId": 80,
      "npc": {
        "id": 30519,
        "name": "Mion",
      },
      "price": 2,
    },
    {
      "buyListId": 86,
      "npc": {
        "id": 30561,
        "name": "Papuma",
      },
      "price": 2,
    },
    {
      "buyListId": 100,
      "npc": {
        "id": 30839,
        "name": "Holly",
      },
      "price": 2,
    },
    {
      "buyListId": 5803,
      "npc": {
        "id": 30891,
        "name": "Verona",
      },
      "price": 2,
    },
    {
      "buyListId": 5601,
      "npc": {
        "id": 30893,
        "name": "Payel",
      },
      "price": 2,
    },
    {
      "buyListId": 106,
      "npc": {
        "id": 31256,
        "name": "Leon",
      },
      "price": 2,
    },
    {
      "buyListId": 108,
      "npc": {
        "id": 31257,
        "name": "Veronica",
      },
      "price": 2,
    },
    {
      "buyListId": 117,
      "npc": {
        "id": 31263,
        "name": "Liesel",
      },
      "price": 2,
    },
    {
      "buyListId": 124,
      "npc": {
        "id": 31300,
        "name": "Drumond",
      },
      "price": 2,
    },
    {
      "buyListId": 126,
      "npc": {
        "id": 31301,
        "name": "Nils",
      },
      "price": 2,
    },
    {
      "buyListId": 135,
      "npc": {
        "id": 31307,
        "name": "Weber",
      },
      "price": 2,
    },
    {
      "buyListId": 383,
      "npc": {
        "id": 31373,
        "name": "Atan",
      },
      "price": 2,
    },
    {
      "buyListId": 382,
      "npc": {
        "id": 31380,
        "name": "Diyabu",
      },
      "price": 2,
    },
    {
      "buyListId": 180,
      "npc": {
        "id": 31945,
        "name": "Auzendorff",
      },
      "price": 2,
    },
    {
      "buyListId": 182,
      "npc": {
        "id": 31946,
        "name": "Hombre",
      },
      "price": 2,
    },
    {
      "buyListId": 191,
      "npc": {
        "id": 31952,
        "name": "Pele",
      },
      "price": 2,
    },
    {
      "buyListId": 22,
      "npc": {
        "id": 30078,
        "name": "Pano",
      },
      "price": 3,
    },
    {
      "buyListId": 71,
      "npc": {
        "id": 30420,
        "name": "Tyra",
      },
      "price": 3,
    },
    {
      "buyListId": 72,
      "npc": {
        "id": 30436,
        "name": "Sarien",
      },
      "price": 3,
    },
    {
      "buyListId": 74,
      "npc": {
        "id": 30437,
        "name": "Rolento",
      },
      "price": 3,
    },
    {
      "buyListId": 73,
      "npc": {
        "id": 30834,
        "name": "Cema",
      },
      "price": 3,
    },
    {
      "buyListId": 95,
      "npc": {
        "id": 30834,
        "name": "Cema",
      },
      "price": 3,
    },
    {
      "buyListId": 5804,
      "npc": {
        "id": 31044,
        "name": "Galman",
      },
      "price": 3,
    },
    {
      "buyListId": 5805,
      "npc": {
        "id": 31045,
        "name": "Kitzka",
      },
      "price": 3,
    },
    {
      "buyListId": 147,
      "npc": {
        "id": 31386,
        "name": "Violet",
      },
      "price": 3,
    },
  ],
  "soulshots": null,
  "spiritshots": null,
  "type": "etcitem",
  "weaponType": null,
  "weight": 6,
}
`;

exports[`item 68 (Falchion) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "One-handed",
  "crystalCount": null,
  "etcItemType": null,
  "grade": "none",
  "iconFile": "weapon_falchion_i00.png",
  "id": 68,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 21,
  "mDef": null,
  "material": "BRONZE",
  "mpConsume": null,
  "name": "Falchion",
  "pAtk": 31,
  "pAtkSpd": 379,
  "pDef": null,
  "price": 244000,
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soldBy": [
    {
      "buyListId": 25,
      "npc": {
        "id": 30084,
        "name": "Graham",
      },
      "price": 268400,
    },
    {
      "buyListId": 49,
      "npc": {
        "id": 30179,
        "name": "Raudia",
      },
      "price": 280600,
    },
    {
      "buyListId": 15,
      "npc": {
        "id": 30060,
        "name": "Sabrin",
      },
      "price": 292800,
    },
    {
      "buyListId": 53,
      "npc": {
        "id": 30207,
        "name": "Arodin",
      },
      "price": 292800,
    },
    {
      "buyListId": 69,
      "npc": {
        "id": 30321,
        "name": "Sydnia",
      },
      "price": 292800,
    },
    {
      "buyListId": 96,
      "npc": {
        "id": 30837,
        "name": "Woodrow",
      },
      "price": 292800,
    },
    {
      "buyListId": 5802,
      "npc": {
        "id": 30891,
        "name": "Verona",
      },
      "price": 292800,
    },
    {
      "buyListId": 105,
      "npc": {
        "id": 31256,
        "name": "Leon",
      },
      "price": 292800,
    },
    {
      "buyListId": 107,
      "npc": {
        "id": 31257,
        "name": "Veronica",
      },
      "price": 292800,
    },
    {
      "buyListId": 123,
      "npc": {
        "id": 31300,
        "name": "Drumond",
      },
      "price": 292800,
    },
    {
      "buyListId": 125,
      "npc": {
        "id": 31301,
        "name": "Nils",
      },
      "price": 292800,
    },
    {
      "buyListId": 179,
      "npc": {
        "id": 31945,
        "name": "Auzendorff",
      },
      "price": 292800,
    },
    {
      "buyListId": 181,
      "npc": {
        "id": 31946,
        "name": "Hombre",
      },
      "price": 292800,
    },
    {
      "buyListId": 87,
      "npc": {
        "id": 30684,
        "name": "Viktor",
      },
      "price": 317200,
    },
  ],
  "soulshots": 2,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_falchion_i00.png",
      "itemId": 6354,
      "name": "Falchion - for Beginners",
      "saName": "for Beginners",
      "skills": [],
    },
  ],
  "spiritshots": 2,
  "type": "weapon",
  "weaponType": "SWORD",
  "weight": 1530,
}
`;

exports[`item 72 (Stormbringer) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "One-handed",
  "craftedBy": [
    {
      "recipeItemId": 2298,
      "recipeName": "Recipe: Stormbringer",
      "successRate": 100,
    },
  ],
  "crystalCount": 916,
  "etcItemType": null,
  "exchangeFrom": [
    {
      "maintainEnchantment": false,
      "multisellId": 300974001,
      "npcs": [
        {
          "id": 30097,
          "name": "Galladucci",
        },
      ],
      "produces": {
        "count": 1,
        "iconFile": "weapon_stormbringer_i00.png",
        "itemId": 72,
        "name": "Stormbringer",
      },
      "required": [
        {
          "count": 573,
          "iconFile": "etc_crystal_green_i00.png",
          "itemId": 1459,
          "name": "Crystal: C-Grade",
        },
        {
          "count": 2865,
          "iconFile": "etc_crystal_blue_i00.png",
          "itemId": 1458,
          "name": "Crystal: D-Grade",
        },
      ],
    },
  ],
  "grade": "c",
  "iconFile": "weapon_stormbringer_i00.png",
  "id": 72,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 61,
  "mDef": null,
  "material": "FINE_STEEL",
  "mpConsume": null,
  "name": "Stormbringer",
  "pAtk": 107,
  "pAtkSpd": 379,
  "pDef": null,
  "price": 2290000,
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 2,
  "specialAbilityOptions": [
    {
      "effectChance": 10,
      "iconFile": "weapon_stormbringer_i01.png",
      "itemId": 4681,
      "name": "Stormbringer - Critical Anger",
      "saName": "Critical Anger",
      "skills": [
        {
          "description": "Causes additional damage during a critical attack while reducing one's own HP.",
          "effects": [
            {
              "op": "add",
              "stat": "cAtkAdd",
              "value": 249,
            },
          ],
          "iconFile": null,
          "id": 3026,
          "level": 1,
          "name": "Special Ability: Critical Anger",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": null,
          "iconFile": null,
          "id": 3025,
          "level": 1,
          "name": "Special Ability: Critical Anger",
          "operateType": "OP_ACTIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_stormbringer_i01.png",
      "itemId": 4682,
      "name": "Stormbringer - Focus",
      "saName": "Focus",
      "skills": [
        {
          "description": "Increases critical attack success rate.",
          "effects": [
            {
              "op": "add",
              "stat": "rCrit",
              "value": 87,
            },
          ],
          "iconFile": null,
          "id": 3010,
          "level": 1,
          "name": "Special Ability: Focus",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_stormbringer_i01.png",
      "itemId": 4683,
      "name": "Stormbringer - Light",
      "saName": "Light",
      "skills": [],
      "statDelta": {
        "deltaPercent": -70,
        "display": "-70% Weight",
        "stat": "weight",
      },
    },
  ],
  "spiritshots": 2,
  "type": "weapon",
  "weaponType": "SWORD",
  "weight": 1430,
}
`;

exports[`item 164 (Elysian) DTO matches snapshot 1`] = `
{
  "accCombat": 4,
  "armorType": null,
  "bodypart": "One-handed",
  "craftedBy": [
    {
      "recipeItemId": 5440,
      "recipeName": "Recipe: Elysian(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5441,
      "recipeName": "Recipe: Elysian(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2160,
  "etcItemType": null,
  "grade": "a",
  "iconFile": "weapon_elysian_i00.png",
  "id": 164,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 114,
  "mDef": null,
  "material": "ORIHARUKON",
  "mpConsume": null,
  "name": "Elysian",
  "pAtk": 232,
  "pAtkSpd": 379,
  "pDef": null,
  "price": 27000000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 4,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_elysian_i01.png",
      "itemId": 5602,
      "name": "Elysian - Health",
      "saName": "Health",
      "skills": [
        {
          "description": "Increases Max HP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 1.25,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3013,
          "level": 3,
          "name": "Special Ability: Health",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_elysian_i01.png",
      "itemId": 5603,
      "name": "Elysian - Anger",
      "saName": "Anger",
      "skills": [
        {
          "description": "Decreases Max HP and increases P. Atk.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 0.85,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "pAtk",
              "value": 32,
            },
          ],
          "iconFile": null,
          "id": 3057,
          "level": 2,
          "name": "Special Ability: Anger",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": 24,
      "iconFile": "weapon_elysian_i01.png",
      "itemId": 5604,
      "name": "Elysian - Critical Drain",
      "saName": "Critical Drain",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": "During a critical attack, absorbs 19 HP from target.",
          "iconFile": null,
          "id": 3059,
          "level": 2,
          "name": "Special Ability: Critical Drain",
          "operateType": "OP_ACTIVE",
          "power": 19,
          "skillType": "DRAIN",
          "target": "TARGET_ONE",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BLUNT",
  "weight": 1580,
}
`;

exports[`item 213 (Branch of The Mother Tree) DTO matches snapshot 1`] = `
{
  "accCombat": 4,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 5462,
      "recipeName": "Recipe: Branch of The Mother Tree(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5463,
      "recipeName": "Recipe: Branch of The Mother Tree(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2160,
  "etcItemType": null,
  "grade": "a",
  "iconFile": "weapon_worldtrees_branch_i00.png",
  "id": 213,
  "isDropable": null,
  "isMagical": true,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 152,
  "mDef": null,
  "material": "WOOD",
  "mpConsume": null,
  "name": "Branch of The Mother Tree",
  "pAtk": 226,
  "pAtkSpd": 325,
  "pDef": null,
  "price": 27000000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 4,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_worldtrees_branch_i01.png",
      "itemId": 5605,
      "name": "Branch of The Mother Tree - Conversion",
      "saName": "Conversion",
      "skills": [
        {
          "description": "Decreases Max HP and increases Max MP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxMp",
              "value": 1.6,
            },
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 0.6,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3048,
          "level": 2,
          "name": "Special Ability: Conversion",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": 30,
      "iconFile": "weapon_worldtrees_branch_i01.png",
      "itemId": 5606,
      "name": "Branch of The Mother Tree - Magic Damage",
      "saName": "Magic Damage",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": null,
          "iconFile": null,
          "id": 3049,
          "level": 2,
          "name": "Special Ability: Increase Critical",
          "operateType": "OP_PASSIVE",
          "power": 8.39,
          "skillType": "MDAM",
          "target": "TARGET_NONE",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_worldtrees_branch_i01.png",
      "itemId": 5607,
      "name": "Branch of The Mother Tree - Acumen",
      "saName": "Acumen",
      "skills": [
        {
          "description": "Increases Casting Spd.",
          "effects": [
            {
              "op": "mul",
              "stat": "mAtkSpd",
              "value": 1.15,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3047,
          "level": 2,
          "name": "Special Ability: Acumen",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BIGBLUNT",
  "weight": 900,
}
`;

exports[`item 287 (Bow of Peril) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 5007,
      "recipeName": "Recipe: Bow of Peril (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 4199,
      "recipeName": "Recipe: Bow of Peril",
      "successRate": 100,
    },
  ],
  "crystalCount": 1746,
  "etcItemType": null,
  "grade": "b",
  "iconFile": "weapon_hazard_bow_i00.png",
  "id": 287,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 99,
  "mDef": null,
  "material": "BLOOD_STEEL",
  "mpConsume": 9,
  "name": "Bow of Peril",
  "pAtk": 400,
  "pAtkSpd": 293,
  "pDef": null,
  "price": 13100000,
  "rCrit": 12,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": 1500,
  "sDef": null,
  "soulshots": 3,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_hazard_bow_i01.png",
      "itemId": 4828,
      "name": "Bow of Peril - Guidance",
      "saName": "Guidance",
      "skills": [
        {
          "description": "Increases Accuracy.",
          "effects": [
            {
              "op": "add",
              "stat": "accCombat",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3008,
          "level": 6,
          "name": "Special Ability: Guidance",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_hazard_bow_i01.png",
      "itemId": 4829,
      "name": "Bow of Peril - Quick Recovery",
      "saName": "Quick Recovery",
      "skills": [],
      "statDelta": {
        "deltaPercent": -13,
        "display": "-13% Reuse Delay",
        "stat": "reuseDelay",
      },
    },
    {
      "effectChance": null,
      "iconFile": "weapon_hazard_bow_i01.png",
      "itemId": 4830,
      "name": "Bow of Peril - Cheap Shot",
      "saName": "Cheap Shot",
      "saveMechanic": {
        "amount": 2,
        "chance": 42,
        "kind": "mp",
      },
      "skills": [],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BOW",
  "weight": 1700,
}
`;

exports[`item 288 (Carnage Bow) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 5444,
      "recipeName": "Recipe: Carnage Bow(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5445,
      "recipeName": "Recipe: Carnage Bow(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 1464,
  "etcItemType": null,
  "grade": "a",
  "iconFile": "weapon_carnium_bow_i00.png",
  "id": 288,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 107,
  "mDef": null,
  "material": "DAMASCUS",
  "mpConsume": 9,
  "name": "Carnage Bow",
  "pAtk": 440,
  "pAtkSpd": 293,
  "pDef": null,
  "price": 18300000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 12,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": 1500,
  "sDef": null,
  "soulshots": 2,
  "specialAbilityOptions": [
    {
      "effectChance": 35,
      "iconFile": "weapon_carnium_bow_i01.png",
      "itemId": 5609,
      "name": "Carnage Bow - Critical Bleed",
      "saName": "Critical Bleed",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": "Causes target to bleed, instantly reducing HP. Effect 7.",
          "iconFile": null,
          "id": 3053,
          "level": 1,
          "name": "Special Ability: Critical Bleed",
          "operateType": "OP_ACTIVE",
          "power": 70,
          "skillType": "BLEED",
          "target": "TARGET_ONE",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_carnium_bow_i01.png",
      "itemId": 5610,
      "name": "Carnage Bow - Mana Up",
      "saName": "Mana Up",
      "skills": [
        {
          "description": "Increases maximum MP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxMp",
              "value": 1.3,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3014,
          "level": 2,
          "name": "Special Ability: Mana Up",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_carnium_bow_i01.png",
      "itemId": 4833,
      "name": "Carnage Bow - Quick Recovery",
      "saName": "Quick Recovery",
      "skills": [],
      "statDelta": {
        "deltaPercent": -10,
        "display": "-10% Reuse Delay",
        "stat": "reuseDelay",
      },
    },
    {
      "effectChance": null,
      "iconFile": "weapon_carnium_bow_i01.png",
      "itemId": 5608,
      "name": "Carnage Bow - Light",
      "saName": "Light",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
      "statDelta": {
        "deltaPercent": -70,
        "display": "-70% Weight",
        "stat": "weight",
      },
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BOW",
  "weight": 1670,
}
`;

exports[`item 305 (Tallum Glaive) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 5456,
      "recipeName": "Recipe: Tallum Glaive(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5457,
      "recipeName": "Recipe: Tallum Glaive(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2160,
  "etcItemType": null,
  "grade": "a",
  "iconFile": "weapon_tallum_glaive_i00.png",
  "id": 305,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": "3599-1",
  "mAtk": 114,
  "mDef": null,
  "material": "CHRYSOLITE",
  "mpConsume": null,
  "name": "Tallum Glaive",
  "pAtk": 232,
  "pAtkSpd": 325,
  "pDef": null,
  "price": 27000000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "skill": {
    "description": "Enables the character to attack multiple opponents.",
    "effects": [
      {
        "op": "add",
        "stat": "atkCountMax",
        "value": 4,
      },
    ],
    "iconFile": null,
    "id": 3599,
    "level": 1,
    "name": "Polearm Multi-attack",
    "operateType": "OP_PASSIVE",
    "power": null,
    "skillType": "BUFF",
    "target": "TARGET_SELF",
  },
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_tallum_glaive_i01.png",
      "itemId": 5632,
      "name": "Tallum Glaive - Guidance",
      "saName": "Guidance",
      "skills": [
        {
          "description": "Increases Accuracy, and enables the character to attack multiple opponents.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "accCombat",
              "value": 4,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3602,
          "level": 8,
          "name": "Special Ability: Guidance",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_tallum_glaive_i01.png",
      "itemId": 5633,
      "name": "Tallum Glaive - Health",
      "saName": "Health",
      "skills": [
        {
          "description": "Increases Max HP. Allows simultaneous attacks on multiple targets.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 1.25,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3013,
          "level": 4,
          "name": "Special Ability: Health",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_tallum_glaive_i01.png",
      "itemId": 5634,
      "name": "Tallum Glaive - Wide Blow",
      "saName": "Wide Blow",
      "skills": [
        {
          "description": "Unleashes an attack that strikes multiple opponents,.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 2,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "POLE",
  "weight": 1840,
}
`;

exports[`item 547 (Tallum Helmet) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "Helmet",
  "crystalCount": 139,
  "etcItemType": null,
  "exchangeFrom": [
    {
      "maintainEnchantment": true,
      "multisellId": 311262506,
      "npcs": [
        {
          "id": 31126,
          "name": "Blacksmith of Mammon",
        },
      ],
      "produces": {
        "count": 1,
        "iconFile": "armor_helmet_i00.png",
        "itemId": 547,
        "name": "Tallum Helm",
      },
      "required": [
        {
          "count": 1,
          "iconFile": "armor_helmet_i02.png",
          "itemId": 5294,
          "name": "Sealed Tallum Helmet",
        },
        {
          "count": 130500,
          "iconFile": "etc_ancient_adena_i00.png",
          "itemId": 5575,
          "name": "Ancient Adena",
        },
      ],
    },
  ],
  "grade": "a",
  "iconFile": "armor_helmet_i00.png",
  "id": 547,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": null,
  "mDef": null,
  "material": "CLOTH",
  "mpConsume": null,
  "name": "Tallum Helm",
  "pAtk": null,
  "pAtkSpd": null,
  "pDef": 69,
  "partOfSets": [
    {
      "bonusSkill": {
        "description": "Increases resistance to poison/bleeding attacks. Atk. Spd. and maximum weight limit are also increased. STR+2, CON-2.",
        "effects": [
          {
            "op": "mul",
            "stat": "pAtkSpd",
            "value": 1.08,
          },
          {
            "op": "add",
            "stat": "maxLoad",
            "value": 5759,
          },
          {
            "op": "add",
            "stat": "STR",
            "value": 2,
          },
        ],
        "iconFile": null,
        "id": 3531,
        "level": 1,
        "name": "Tallum Heavy Armor Set",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "enchant6BonusSkill": {
        "description": "Increases P. Def. and MP regeneration by enchanting set items.",
        "effects": [
          {
            "op": "add",
            "stat": "pDef",
            "value": 50,
          },
          {
            "op": "add",
            "stat": "regMp",
            "value": 2,
          },
        ],
        "iconFile": null,
        "id": 3620,
        "level": 1,
        "name": "Enchant Heavy Armor (Grade A)",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "id": 34,
      "name": "Tallum Heavy Set",
      "pieces": {
        "chest": {
          "iconFile": "armor_t77_ul_i00.png",
          "itemId": 2382,
          "name": "Tallum Plate Armor",
        },
        "feet": {
          "iconFile": "armor_t77_b_i00.png",
          "itemId": 5780,
          "name": "Tallum Boots - Heavy Armor",
        },
        "gloves": {
          "iconFile": "armor_t77_g_i00.png",
          "itemId": 5768,
          "name": "Tallum Gloves - Heavy Armor",
        },
        "head": {
          "iconFile": "armor_helmet_i00.png",
          "itemId": 547,
          "name": "Tallum Helm",
        },
      },
    },
    {
      "bonusSkill": {
        "description": "Increases resistance to poison/bleeding attacks. MP recovery rate and Max MP are also increased. MEN+2, WIT-2.",
        "effects": [
          {
            "op": "mul",
            "stat": "regMp",
            "value": 1.08,
          },
          {
            "op": "add",
            "stat": "maxMp",
            "value": 222,
          },
          {
            "op": "add",
            "stat": "MEN",
            "value": 2,
          },
        ],
        "iconFile": null,
        "id": 3533,
        "level": 1,
        "name": "Tallum Light Armor Set",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "enchant6BonusSkill": {
        "description": "Increases M. Def. and Evasion by enchanting set items.",
        "effects": [
          {
            "op": "add",
            "stat": "rEvas",
            "value": 2,
          },
          {
            "op": "add",
            "stat": "mDef",
            "value": 28,
          },
        ],
        "iconFile": null,
        "id": 3621,
        "level": 1,
        "name": "Enchant Light Armor (Grade A)",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "id": 35,
      "name": "Tallum Light Set",
      "pieces": {
        "chest": {
          "iconFile": "armor_t78_ul_i00.png",
          "itemId": 2393,
          "name": "Tallum Leather Armor",
        },
        "feet": {
          "iconFile": "armor_t78_b_i00.png",
          "itemId": 5781,
          "name": "Tallum Boots - Light Armor",
        },
        "gloves": {
          "iconFile": "armor_t78_g_i00.png",
          "itemId": 5769,
          "name": "Tallum Gloves - Light Armor",
        },
        "head": {
          "iconFile": "armor_helmet_i00.png",
          "itemId": 547,
          "name": "Tallum Helm",
        },
      },
    },
    {
      "bonusSkill": {
        "description": "Increases resistance to poison/bleeding attacks. Casting Spd. and M. Def. are also increased. INT-2, WIT+2.",
        "effects": [
          {
            "op": "mul",
            "stat": "mAtkSpd",
            "value": 1.15,
          },
          {
            "op": "mul",
            "stat": "mDef",
            "value": 1.08,
          },
          {
            "op": "add",
            "stat": "WIT",
            "value": 2,
          },
        ],
        "iconFile": null,
        "id": 3534,
        "level": 1,
        "name": "Tallum Robe Set",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "enchant6BonusSkill": {
        "description": "Increases P. Def. and weight capacity by enchanting set items.",
        "effects": [
          {
            "op": "mul",
            "stat": "maxLoad",
            "value": 1.3,
          },
          {
            "op": "add",
            "stat": "pDef",
            "value": 32,
          },
        ],
        "iconFile": null,
        "id": 3622,
        "level": 1,
        "name": "Enchant Robe (Grade A)",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "id": 36,
      "name": "Tallum Robe Set",
      "pieces": {
        "chest": {
          "iconFile": "armor_t79_u_i00.png",
          "itemId": 2400,
          "name": "Tallum Tunic",
        },
        "feet": {
          "iconFile": "armor_t79_b_i00.png",
          "itemId": 5782,
          "name": "Tallum Boots - Robe",
        },
        "gloves": {
          "iconFile": "armor_t79_g_i00.png",
          "itemId": 5770,
          "name": "Tallum Gloves - Robe",
        },
        "head": {
          "iconFile": "armor_helmet_i00.png",
          "itemId": 547,
          "name": "Tallum Helm",
        },
        "legs": {
          "iconFile": "armor_t79_l_i00.png",
          "itemId": 2405,
          "name": "Tallum Stockings",
        },
      },
    },
  ],
  "price": 1740000,
  "rCrit": null,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": null,
  "spiritshots": null,
  "type": "armor",
  "weaponType": null,
  "weight": 570,
}
`;

exports[`item 1152 (Spellbook: Heal) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": null,
  "crystalCount": null,
  "etcItemType": null,
  "grade": "none",
  "iconFile": "etc_spell_books_white_i00.png",
  "id": 1152,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": null,
  "mDef": null,
  "material": "PAPER",
  "mpConsume": null,
  "name": "Spellbook: Heal",
  "pAtk": null,
  "pAtkSpd": null,
  "pDef": null,
  "price": 100,
  "rCrit": null,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soldBy": [
    {
      "buyListId": 196,
      "npc": {
        "id": 31670,
        "name": "Burns",
      },
      "price": 107,
    },
    {
      "buyListId": 369,
      "npc": {
        "id": 30082,
        "name": "Denkus",
      },
      "price": 110,
    },
    {
      "buyListId": 29,
      "npc": {
        "id": 30094,
        "name": "Gentler",
      },
      "price": 110,
    },
    {
      "buyListId": 150,
      "npc": {
        "id": 31419,
        "name": "Lorel",
      },
      "price": 110,
    },
    {
      "buyListId": 197,
      "npc": {
        "id": 31420,
        "name": "Tomanel",
      },
      "price": 110,
    },
    {
      "buyListId": 355,
      "npc": {
        "id": 30003,
        "name": "Silvia",
      },
      "price": 115,
    },
    {
      "buyListId": 362,
      "npc": {
        "id": 30138,
        "name": "Minaless",
      },
      "price": 115,
    },
    {
      "buyListId": 360,
      "npc": {
        "id": 30149,
        "name": "Creamees",
      },
      "price": 115,
    },
    {
      "buyListId": 371,
      "npc": {
        "id": 30181,
        "name": "Galibredo",
      },
      "price": 115,
    },
    {
      "buyListId": 149,
      "npc": {
        "id": 31413,
        "name": "Antonio",
      },
      "price": 115,
    },
    {
      "buyListId": 359,
      "npc": {
        "id": 31414,
        "name": "Lynn",
      },
      "price": 115,
    },
    {
      "buyListId": 361,
      "npc": {
        "id": 31415,
        "name": "Triya",
      },
      "price": 115,
    },
    {
      "buyListId": 174,
      "npc": {
        "id": 31422,
        "name": "Migel",
      },
      "price": 115,
    },
    {
      "buyListId": 366,
      "npc": {
        "id": 30062,
        "name": "Sonia",
      },
      "price": 120,
    },
    {
      "buyListId": 373,
      "npc": {
        "id": 30294,
        "name": "Varan",
      },
      "price": 120,
    },
    {
      "buyListId": 66,
      "npc": {
        "id": 30313,
        "name": "Asha",
      },
      "price": 120,
    },
    {
      "buyListId": 205,
      "npc": {
        "id": 30314,
        "name": "Nestle",
      },
      "price": 120,
    },
    {
      "buyListId": 101,
      "npc": {
        "id": 30840,
        "name": "Lorenzo",
      },
      "price": 120,
    },
    {
      "buyListId": 376,
      "npc": {
        "id": 30842,
        "name": "Alexis",
      },
      "price": 120,
    },
    {
      "buyListId": 377,
      "npc": {
        "id": 30892,
        "name": "Enverun",
      },
      "price": 120,
    },
    {
      "buyListId": 115,
      "npc": {
        "id": 31262,
        "name": "Rupert",
      },
      "price": 120,
    },
    {
      "buyListId": 121,
      "npc": {
        "id": 31284,
        "name": "Elena",
      },
      "price": 120,
    },
    {
      "buyListId": 133,
      "npc": {
        "id": 31306,
        "name": "Natasha",
      },
      "price": 120,
    },
    {
      "buyListId": 139,
      "npc": {
        "id": 31338,
        "name": "Anton",
      },
      "price": 120,
    },
    {
      "buyListId": 170,
      "npc": {
        "id": 31416,
        "name": "Aren",
      },
      "price": 120,
    },
    {
      "buyListId": 171,
      "npc": {
        "id": 31417,
        "name": "Berynel",
      },
      "price": 120,
    },
    {
      "buyListId": 160,
      "npc": {
        "id": 31418,
        "name": "Rouke",
      },
      "price": 120,
    },
    {
      "buyListId": 202,
      "npc": {
        "id": 31421,
        "name": "Ratriya",
      },
      "price": 120,
    },
    {
      "buyListId": 162,
      "npc": {
        "id": 31423,
        "name": "Romas",
      },
      "price": 120,
    },
    {
      "buyListId": 151,
      "npc": {
        "id": 31666,
        "name": "Lumen",
      },
      "price": 120,
    },
    {
      "buyListId": 189,
      "npc": {
        "id": 31951,
        "name": "Jose",
      },
      "price": 120,
    },
    {
      "buyListId": 194,
      "npc": {
        "id": 31973,
        "name": "Raheel",
      },
      "price": 120,
    },
    {
      "buyListId": 46,
      "npc": {
        "id": 30166,
        "name": "Wesley",
      },
      "price": 130,
    },
    {
      "buyListId": 380,
      "npc": {
        "id": 30231,
        "name": "Garette",
      },
      "price": 130,
    },
  ],
  "soulshots": null,
  "spiritshots": null,
  "type": "etcitem",
  "usedAsSpellbook": {
    "iconFile": "skill1011.png",
    "learnedBy": [
      {
        "id": 10,
        "name": "Human Mystic",
        "professionLevel": 0,
      },
      {
        "id": 15,
        "name": "Cleric",
        "professionLevel": 1,
      },
      {
        "id": 25,
        "name": "Elven Mystic",
        "professionLevel": 0,
      },
      {
        "id": 29,
        "name": "Elven Oracle",
        "professionLevel": 1,
      },
      {
        "id": 38,
        "name": "Dark Mystic",
        "professionLevel": 0,
      },
      {
        "id": 42,
        "name": "Shillien Oracle",
        "professionLevel": 1,
      },
    ],
    "skillId": 1011,
    "skillName": "Heal",
  },
  "weaponType": null,
  "weight": 120,
}
`;

exports[`item 2382 (Tallum Plate Armor) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": "HEAVY",
  "bodypart": "Full Armor",
  "crystalCount": 541,
  "etcItemType": null,
  "exchangeFrom": [
    {
      "maintainEnchantment": true,
      "multisellId": 311262506,
      "npcs": [
        {
          "id": 31126,
          "name": "Blacksmith of Mammon",
        },
      ],
      "produces": {
        "count": 1,
        "iconFile": "armor_t77_ul_i00.png",
        "itemId": 2382,
        "name": "Tallum Plate Armor",
      },
      "required": [
        {
          "count": 1,
          "iconFile": "armor_t77_ul_i02.png",
          "itemId": 5293,
          "name": "Sealed Tallum Plate Armor",
        },
        {
          "count": 507750,
          "iconFile": "etc_ancient_adena_i00.png",
          "itemId": 5575,
          "name": "Ancient Adena",
        },
      ],
    },
  ],
  "grade": "a",
  "iconFile": "armor_t77_ul_i00.png",
  "id": 2382,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": null,
  "mDef": null,
  "material": "LEATHER",
  "mpConsume": null,
  "name": "Tallum Plate Armor",
  "pAtk": null,
  "pAtkSpd": null,
  "pDef": 278,
  "partOfSets": [
    {
      "bonusSkill": {
        "description": "Increases resistance to poison/bleeding attacks. Atk. Spd. and maximum weight limit are also increased. STR+2, CON-2.",
        "effects": [
          {
            "op": "mul",
            "stat": "pAtkSpd",
            "value": 1.08,
          },
          {
            "op": "add",
            "stat": "maxLoad",
            "value": 5759,
          },
          {
            "op": "add",
            "stat": "STR",
            "value": 2,
          },
        ],
        "iconFile": null,
        "id": 3531,
        "level": 1,
        "name": "Tallum Heavy Armor Set",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "enchant6BonusSkill": {
        "description": "Increases P. Def. and MP regeneration by enchanting set items.",
        "effects": [
          {
            "op": "add",
            "stat": "pDef",
            "value": 50,
          },
          {
            "op": "add",
            "stat": "regMp",
            "value": 2,
          },
        ],
        "iconFile": null,
        "id": 3620,
        "level": 1,
        "name": "Enchant Heavy Armor (Grade A)",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "id": 34,
      "name": "Tallum Heavy Set",
      "pieces": {
        "chest": {
          "iconFile": "armor_t77_ul_i00.png",
          "itemId": 2382,
          "name": "Tallum Plate Armor",
        },
        "feet": {
          "iconFile": "armor_t77_b_i00.png",
          "itemId": 5780,
          "name": "Tallum Boots - Heavy Armor",
        },
        "gloves": {
          "iconFile": "armor_t77_g_i00.png",
          "itemId": 5768,
          "name": "Tallum Gloves - Heavy Armor",
        },
        "head": {
          "iconFile": "armor_helmet_i00.png",
          "itemId": 547,
          "name": "Tallum Helm",
        },
      },
    },
  ],
  "price": 6770000,
  "rCrit": null,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": null,
  "spiritshots": null,
  "type": "armor",
  "weaponType": null,
  "weight": 9780,
}
`;

exports[`item 5293 (Sealed Tallum Plate Armor) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": "HEAVY",
  "bodypart": "Full Armor",
  "craftedBy": [
    {
      "recipeItemId": 5418,
      "recipeName": "Recipe: Sealed Tallum Plate Armor(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5419,
      "recipeName": "Recipe: Sealed Tallum Plate Armor(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 541,
  "etcItemType": null,
  "exchangeFor": [
    {
      "maintainEnchantment": true,
      "multisellId": 311262506,
      "npcs": [
        {
          "id": 31126,
          "name": "Blacksmith of Mammon",
        },
      ],
      "produces": {
        "count": 1,
        "iconFile": "armor_t77_ul_i00.png",
        "itemId": 2382,
        "name": "Tallum Plate Armor",
      },
      "required": [
        {
          "count": 1,
          "iconFile": "armor_t77_ul_i02.png",
          "itemId": 5293,
          "name": "Sealed Tallum Plate Armor",
        },
        {
          "count": 507750,
          "iconFile": "etc_ancient_adena_i00.png",
          "itemId": 5575,
          "name": "Ancient Adena",
        },
      ],
    },
  ],
  "grade": "a",
  "iconFile": "armor_t77_ul_i02.png",
  "id": 5293,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": null,
  "mDef": null,
  "material": "LEATHER",
  "mpConsume": null,
  "name": "Sealed Tallum Plate Armor",
  "pAtk": null,
  "pAtkSpd": null,
  "pDef": 278,
  "price": 6770000,
  "rCrit": null,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": null,
  "spiritshots": null,
  "type": "armor",
  "weaponType": null,
  "weight": 9780,
}
`;

exports[`item 5710 (Zubei's Gauntlets - Heavy Armor) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "Gloves",
  "crystalCount": 69,
  "etcItemType": null,
  "exchangeFor": [
    {
      "maintainEnchantment": true,
      "multisellId": 1003,
      "npcs": [
        {
          "id": 30298,
          "name": "Pinter",
        },
        {
          "id": 30300,
          "name": "Pushkin",
        },
        {
          "id": 30317,
          "name": "Kluto",
        },
        {
          "id": 30458,
          "name": "Poitan",
        },
        {
          "id": 30471,
          "name": "Rupio",
        },
        {
          "id": 30678,
          "name": "Helton",
        },
        {
          "id": 30688,
          "name": "Duning",
        },
        {
          "id": 30846,
          "name": "Wilbert",
        },
        {
          "id": 30898,
          "name": "Morning",
        },
        {
          "id": 31271,
          "name": "Hilda",
        },
        {
          "id": 31316,
          "name": "Vincenz",
        },
        {
          "id": 31583,
          "name": "Feynn",
        },
        {
          "id": 31960,
          "name": "Byron",
        },
        {
          "id": 31990,
          "name": "Siger",
        },
      ],
      "produces": {
        "count": 1,
        "iconFile": "armor_t64_g_i02.png",
        "itemId": 612,
        "name": "Zubei's Gauntlets",
      },
      "required": [
        {
          "count": 1,
          "iconFile": "armor_t64_g_i00.png",
          "itemId": 5710,
          "name": "Zubei's Gauntlets - Heavy Armor",
        },
      ],
    },
  ],
  "exchangeFrom": [
    {
      "maintainEnchantment": true,
      "multisellId": 1002,
      "npcs": [
        {
          "id": 30298,
          "name": "Pinter",
        },
        {
          "id": 30300,
          "name": "Pushkin",
        },
        {
          "id": 30317,
          "name": "Kluto",
        },
        {
          "id": 30458,
          "name": "Poitan",
        },
        {
          "id": 30471,
          "name": "Rupio",
        },
        {
          "id": 30678,
          "name": "Helton",
        },
        {
          "id": 30688,
          "name": "Duning",
        },
        {
          "id": 30846,
          "name": "Wilbert",
        },
        {
          "id": 30898,
          "name": "Morning",
        },
        {
          "id": 31271,
          "name": "Hilda",
        },
        {
          "id": 31316,
          "name": "Vincenz",
        },
        {
          "id": 31583,
          "name": "Feynn",
        },
        {
          "id": 31960,
          "name": "Byron",
        },
        {
          "id": 31990,
          "name": "Siger",
        },
      ],
      "produces": {
        "count": 1,
        "iconFile": "armor_t64_g_i00.png",
        "itemId": 5710,
        "name": "Zubei's Gauntlets - Heavy Armor",
      },
      "required": [
        {
          "count": 1,
          "iconFile": "armor_t64_g_i02.png",
          "itemId": 612,
          "name": "Zubei's Gauntlets",
        },
      ],
    },
  ],
  "grade": "b",
  "iconFile": "armor_t64_g_i00.png",
  "id": 5710,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": null,
  "mDef": null,
  "material": "MITHRIL",
  "mpConsume": null,
  "name": "Zubei's Gauntlets - Heavy Armor",
  "pAtk": null,
  "pAtkSpd": null,
  "pDef": 41,
  "partOfSets": [
    {
      "bonusSkill": {
        "description": "Increases P. Def. and Max HP.",
        "effects": [
          {
            "op": "mul",
            "stat": "pDef",
            "value": 1.0524,
          },
          {
            "op": "add",
            "stat": "maxHp",
            "value": 294,
          },
        ],
        "iconFile": null,
        "id": 3518,
        "level": 1,
        "name": "Zubei's Heavy Armor Set",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "enchant6BonusSkill": {
        "description": "Increases P. Def. and MP regeneration by enchanting set items.",
        "effects": [
          {
            "op": "add",
            "stat": "pDef",
            "value": 44,
          },
          {
            "op": "add",
            "stat": "regMp",
            "value": 2,
          },
        ],
        "iconFile": null,
        "id": 3617,
        "level": 1,
        "name": "Enchant Heavy Armor (Grade B)",
        "operateType": "OP_PASSIVE",
        "power": null,
        "skillType": "BUFF",
        "target": "TARGET_SELF",
      },
      "id": 19,
      "name": "Zubei Heavy Set",
      "pieces": {
        "chest": {
          "iconFile": "armor_t64_u_i00.png",
          "itemId": 357,
          "name": "Zubei's Breastplate",
        },
        "feet": {
          "iconFile": "armor_t64_b_i00.png",
          "itemId": 5726,
          "name": "Zubei's Boots - Heavy Armor",
        },
        "gloves": {
          "iconFile": "armor_t64_g_i00.png",
          "itemId": 5710,
          "name": "Zubei's Gauntlets - Heavy Armor",
        },
        "head": {
          "iconFile": "armor_helmet_i00.png",
          "itemId": 503,
          "name": "Zubei's Helmet",
        },
        "legs": {
          "iconFile": "armor_t64_l_i00.png",
          "itemId": 383,
          "name": "Zubei's Gaiters",
        },
      },
    },
  ],
  "price": 519000,
  "rCrit": null,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": null,
  "spiritshots": null,
  "type": "armor",
  "weaponType": null,
  "weight": 590,
}
`;

exports[`item 6367 (Angel Slayer) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "One-handed",
  "craftedBy": [
    {
      "recipeItemId": 6887,
      "recipeName": "Recipe: Angel Slayer (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 6888,
      "recipeName": "Recipe: Angel Slayer (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_angel_slayer_i00.png",
  "id": 6367,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 132,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": null,
  "name": "Angel Slayer",
  "pAtk": 246,
  "pAtkSpd": 433,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 12,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_angel_slayer_i01.png",
      "itemId": 6590,
      "name": "Angel Slayer - Crt. Damage",
      "saName": "Crt. Damage",
      "skills": [
        {
          "description": "Increases critical attack success rate.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "cAtkAdd",
              "value": 265,
            },
          ],
          "iconFile": null,
          "id": 3572,
          "level": 1,
          "name": "Special Ability: Crt. Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_angel_slayer_i01.png",
      "itemId": 6591,
      "name": "Angel Slayer - HP Drain",
      "saName": "HP Drain",
      "skills": [
        {
          "description": "Partially restores HP using damage inflicted upon the enemy. Excludes damage from skill or range attack.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "absorbDam",
              "value": 3,
            },
          ],
          "iconFile": null,
          "id": 3568,
          "level": 1,
          "name": "Special Ability: HP Drain",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_angel_slayer_i01.png",
      "itemId": 6592,
      "name": "Angel Slayer - Haste",
      "saName": "Haste",
      "skills": [
        {
          "description": "Increases Atk.Speed.",
          "effects": [
            {
              "op": "mul",
              "stat": "pAtkSpd",
              "value": 1.07,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3564,
          "level": 1,
          "name": "Special Ability: Haste",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "DAGGER",
  "weight": 950,
}
`;

exports[`item 6370 (Saint Spear) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 6893,
      "recipeName": "Recipe: Saint Spear (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 6894,
      "recipeName": "Recipe: Saint Spear (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_saint_spear_i00.png",
  "id": 6370,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": "3599-1",
  "mAtk": 132,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": null,
  "name": "Saint Spear",
  "pAtk": 281,
  "pAtkSpd": 325,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "skill": {
    "description": "Enables the character to attack multiple opponents.",
    "effects": [
      {
        "op": "add",
        "stat": "atkCountMax",
        "value": 4,
      },
    ],
    "iconFile": null,
    "id": 3599,
    "level": 1,
    "name": "Polearm Multi-attack",
    "operateType": "OP_PASSIVE",
    "power": null,
    "skillType": "BUFF",
    "target": "TARGET_SELF",
  },
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_saint_spear_i01.png",
      "itemId": 6599,
      "name": "Saint Spear - Health",
      "saName": "Health",
      "skills": [
        {
          "description": "Increases Max HP. Allows simultaneous attacks on multiple targets.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 1.25,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3013,
          "level": 4,
          "name": "Special Ability: Health",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_saint_spear_i01.png",
      "itemId": 6600,
      "name": "Saint Spear - Guidance",
      "saName": "Guidance",
      "skills": [
        {
          "description": "Increases Accuracy, and enables the character to attack multiple opponents.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "accCombat",
              "value": 5,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3602,
          "level": 9,
          "name": "Special Ability: Guidance",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_saint_spear_i01.png",
      "itemId": 6601,
      "name": "Saint Spear - Haste",
      "saName": "Haste",
      "skills": [
        {
          "description": "Increases Atk. Spd., and enables the character to attack multiple opponents.",
          "effects": [
            {
              "op": "mul",
              "stat": "pAtkSpd",
              "value": 1.07,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3601,
          "level": 9,
          "name": "Special Ability: Haste",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "POLE",
  "weight": 1800,
}
`;

exports[`item 6372 (Heaven's Divider) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 6897,
      "recipeName": "Recipe: Heavens Divider (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 6898,
      "recipeName": "Recipe: Heavens Divider (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_heavens_divider_i00.png",
  "id": 6372,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 132,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": null,
  "name": "Heaven's Divider",
  "pAtk": 342,
  "pAtkSpd": 325,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_heavens_divider_i01.png",
      "itemId": 6605,
      "name": "Heavens Divider - Haste",
      "saName": "Haste",
      "skills": [
        {
          "description": "Increases Atk.Speed.",
          "effects": [
            {
              "op": "mul",
              "stat": "pAtkSpd",
              "value": 1.07,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3564,
          "level": 1,
          "name": "Special Ability: Haste",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_heavens_divider_i01.png",
      "itemId": 6606,
      "name": "Heavens Divider - Health",
      "saName": "Health",
      "skills": [
        {
          "description": "Increases Max HP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 1.25,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3013,
          "level": 3,
          "name": "Special Ability: Health",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_heavens_divider_i01.png",
      "itemId": 6607,
      "name": "Heavens Divider - Focus",
      "saName": "Focus",
      "skills": [
        {
          "description": "Increases critical attack success rate.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "rCrit",
              "value": 84,
            },
          ],
          "iconFile": null,
          "id": 3566,
          "level": 1,
          "name": "Special Ability: Focus",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BIGSWORD",
  "weight": 1380,
}
`;

exports[`item 6579 (Arcana Mace) DTO matches snapshot 1`] = `
{
  "accCombat": 4,
  "armorType": null,
  "bodypart": "One-handed",
  "craftedBy": [
    {
      "recipeItemId": 6899,
      "recipeName": "Recipe: Arcana Mace (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 6900,
      "recipeName": "Recipe: Arcana Mace (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_arcana_mace_i00.png",
  "id": 6579,
  "isDropable": null,
  "isMagical": true,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 175,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": null,
  "name": "Arcana Mace",
  "pAtk": 225,
  "pAtkSpd": 379,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 4,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_arcana_mace_i01.png",
      "itemId": 6608,
      "name": "Arcana Mace - Acumen",
      "saName": "Acumen",
      "skills": [
        {
          "description": "Increases Casting Spd.",
          "effects": [
            {
              "op": "mul",
              "stat": "mAtkSpd",
              "value": 1.15,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3047,
          "level": 2,
          "name": "Special Ability: Acumen",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_arcana_mace_i01.png",
      "itemId": 6609,
      "name": "Arcana Mace - MP Regeneration",
      "saName": "MP Regeneration",
      "skills": [
        {
          "description": "Increases MP regeneration rate.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "regMp",
              "value": 0.5,
            },
          ],
          "iconFile": null,
          "id": 3576,
          "level": 1,
          "name": "Special Ability: MP Regeneration",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_arcana_mace_i01.png",
      "itemId": 6610,
      "name": "Arcana Mace - Mana Up",
      "saName": "Mana Up",
      "skills": [
        {
          "description": "Increases maximum MP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxMp",
              "value": 1.3,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3014,
          "level": 2,
          "name": "Special Ability: Mana Up",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BLUNT",
  "weight": 1300,
}
`;

exports[`item 7575 (Draconic Bow) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 7580,
      "recipeName": "Recipe: Draconic Bow (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 7581,
      "recipeName": "Recipe: Draconic Bow (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_draconic_bow_i00.png",
  "id": 7575,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 132,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": 11,
  "name": "Draconic Bow",
  "pAtk": 581,
  "pAtkSpd": 293,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 12,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": 1500,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_draconic_bow_i01.png",
      "itemId": 7576,
      "name": "Draconic Bow - Cheap Shot",
      "saName": "Cheap Shot",
      "saveMechanic": {
        "amount": 1,
        "chance": 26,
        "kind": "mp",
      },
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_draconic_bow_i01.png",
      "itemId": 7577,
      "name": "Draconic Bow - Focus",
      "saName": "Focus",
      "skills": [
        {
          "description": "Increases critical attack success rate.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "rCrit",
              "value": 88,
            },
          ],
          "iconFile": null,
          "id": 3567,
          "level": 1,
          "name": "Special Ability: Focus",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": 16,
      "iconFile": "weapon_draconic_bow_i01.png",
      "itemId": 7578,
      "name": "Draconic Bow - Critical Slow",
      "saName": "Critical Slow",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": "Temporarily decreases Speed. Effect 3.",
          "iconFile": null,
          "id": 3574,
          "level": 1,
          "name": "Special Ability: Crt. Slow",
          "operateType": "OP_ACTIVE",
          "power": 100,
          "skillType": "DEBUFF",
          "target": "TARGET_ONE",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BOW",
  "weight": 1650,
}
`;

exports[`item 7871 (Sealed Apella Plate Armor) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": "HEAVY",
  "bodypart": "Full Armor",
  "crystalCount": null,
  "etcItemType": null,
  "exchangeFor": [
    {
      "maintainEnchantment": true,
      "multisellId": 311262506,
      "npcs": [
        {
          "id": 31126,
          "name": "Blacksmith of Mammon",
        },
      ],
      "produces": {
        "count": 1,
        "iconFile": "armor_t1004_ul_i00.png",
        "itemId": 7861,
        "name": "Apella Plate Armor",
      },
      "required": [
        {
          "count": 1,
          "iconFile": "armor_t1004_ul_i02.png",
          "itemId": 7871,
          "name": "Sealed Apella Plate Armor",
        },
        {
          "count": 772500,
          "iconFile": "etc_ancient_adena_i00.png",
          "itemId": 5575,
          "name": "Ancient Adena",
        },
      ],
    },
  ],
  "exchangeFrom": [
    {
      "maintainEnchantment": false,
      "multisellId": 1235,
      "npcs": [
        {
          "id": 32024,
          "name": "Mulia",
        },
        {
          "id": 32025,
          "name": "Ilia",
        },
      ],
      "produces": {
        "count": 1,
        "iconFile": "armor_t1004_ul_i02.png",
        "itemId": 7871,
        "name": "Sealed Apella Plate Armor",
      },
      "required": [
        {
          "count": 13540,
          "iconFile": null,
          "itemId": 65336,
          "name": "#65336",
        },
        {
          "count": 7337000,
          "iconFile": "etc_adena_i00.png",
          "itemId": 57,
          "name": "Adena",
        },
      ],
    },
  ],
  "grade": "a",
  "iconFile": "armor_t1004_ul_i02.png",
  "id": 7871,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": null,
  "mDef": null,
  "material": "LEATHER",
  "mpConsume": null,
  "name": "Sealed Apella Plate Armor",
  "pAtk": null,
  "pAtkSpd": null,
  "pDef": 278,
  "price": null,
  "rCrit": null,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": null,
  "spiritshots": null,
  "type": "armor",
  "weaponType": null,
  "weight": 9780,
}
`;
